@@ -705,73 +705,6 @@ around literals."
       (setq list (cdr list)))
     return-string))
 
-;;; Some functions used in time-stamp-format
-
-;;; These functions have been obsolete since 1995
-;;; and will be removed in Emacs 23.
-;;; Meanwhile, discourage other packages from using them.
-(dolist (function '(time-stamp-month-dd-yyyy time-stamp-dd/mm/yyyy
-		    time-stamp-mon-dd-yyyy   time-stamp-dd-mon-yy
-		    time-stamp-yy/mm/dd      time-stamp-yyyy/mm/dd
-		    time-stamp-yyyy-mm-dd    time-stamp-yymmdd
-		    time-stamp-hh:mm:ss      time-stamp-hhmm))
-  (make-obsolete function
-		 "use `time-stamp-string' or `format-time-string' instead."
-		 "20.1"))
-
-;;; pretty form, suitable for a title page
-
-(defun time-stamp-month-dd-yyyy ()
-  "Return the current date as a string in \"Month DD, YYYY\" form."
-  (format-time-string "%B %e, %Y"))
-
-(defun time-stamp-dd/mm/yyyy ()
-  "Return the current date as a string in \"DD/MM/YYYY\" form."
-  (format-time-string "%d/%m/%Y"))
-
-;;; same as __DATE__ in ANSI C
-
-(defun time-stamp-mon-dd-yyyy ()
-  "Return the current date as a string in \"Mon DD YYYY\" form.
-The first character of DD is space if the value is less than 10."
-  (format-time-string "%b %d %Y"))
-
-;;; RFC 822 date
-
-(defun time-stamp-dd-mon-yy ()
-  "Return the current date as a string in \"DD Mon YY\" form."
-  (format-time-string "%d %b %y"))
-
-;;; RCS 3 date
-
-(defun time-stamp-yy/mm/dd ()
-  "Return the current date as a string in \"YY/MM/DD\" form."
-  (format-time-string "%y/%m/%d"))
-
-;;; RCS 5 date
-
-(defun time-stamp-yyyy/mm/dd ()
-  "Return the current date as a string in \"YYYY/MM/DD\" form."
-  (format-time-string "%Y/%m/%d"))
-
-;;; ISO 8601 date
-
-(defun time-stamp-yyyy-mm-dd ()
-  "Return the current date as a string in \"YYYY-MM-DD\" form."
-  (format-time-string "%Y-%m-%d"))
-
-(defun time-stamp-yymmdd ()
-  "Return the current date as a string in \"YYMMDD\" form."
-  (format-time-string "%y%m%d"))
-
-(defun time-stamp-hh:mm:ss ()
-  "Return the current time as a string in \"HH:MM:SS\" form."
-  (format-time-string "%T"))
-
-(defun time-stamp-hhmm ()
-  "Return the current time as a string in \"HHMM\" form."
-  (format-time-string "%H%M"))
-
 (provide 'time-stamp)
 
 ;; arch-tag: 8a12c5c3-25d6-4a71-adc5-24b0e025a1e7
